# ReviewsScrapping

./: .gitignore  app.py  config.py  docker-compose.yml  main.py  pyproject.toml  scraper.py  tasks.py  test.html
backend/: .env  Procfile  README.md  celeryconfig.py  config.py  dockerfile  pyproject.toml  scraper.py  tasks.py
frontend/: dockerfile  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: Dashboard.js  Login.js  Register.js
static/: widget.js
