[project]
name = "reviewsscrapping"
version = "0.1.0"
description = ""
authors = [
    {name = "LittleSweetEvil",email = "40055618+LittleSweetLoli@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "flask (>=3.1.2,<4.0.0)",
    "pymongo (>=4.15.2,<5.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
